--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Jacob Williams</a></h1>
-							<p>A free responsive site template by HTML5 UP</p>
+							<p>Final Year Computer Science Student at Aston University</p>
 						</div>
 
 					<!-- Nav -->
@@ -45,7 +45,7 @@
 
 			<!-- Intro -->
 				<section id="intro" class="wrapper style1">
-					<div class="title">The Introduction</div>
+					<div class="title">About Me</div>
 					<div class="container">
 						<p class="style1">So in case you were wondering what this is all about ...</p>
 						<p class="style2">
@@ -56,7 +56,7 @@
 						free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>, so use it for any of
 						your personal or commercial projects &ndash; just be sure to credit us!</p>
 						<ul class="actions">
-							<li><a href="#" class="button style3 large">Proceed</a></li>
+							<li><a href="Jacob Williams CV.pdf" class="button style3 large icon solid fa-download" target="_blank" download="Jacob Williams CV.pdf">My CV</a></li>
 						</ul>
 					</div>
 				</section>
