--- a/index.html
+++ b/index.html
@@ -35,20 +35,13 @@
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Experience</a>
-									<ul>
-										<li><a href="esendex.html">Esendex</a></li>
-										<li><a href="warwick-analytics.html">Warwick Analytics</a></li>
-										<li><a href="rimilia.html">Rimilia</a></li>
-									</ul>
-								</li>
-								<li>
+								<li><a href="experience.html">Experience</a></li>
+								<!-- <li>
 									<a href="#">Projects</a>
 									<ul>
 										<li><a href="gardeners-diary.html">Gardener's Diary</a></li>
 									</ul>
-								</li>
+								</li> -->
 							</ul>
 						</nav>
 
