--- a/experience.html
+++ b/experience.html
@@ -25,7 +25,7 @@
                 <!-- Logo -->
                     <div id="logo">
                         <h1><a href="index.html">Jacob Williams</a></h1>
-                        <p>Final Year Computer Science Student at Aston University</p>
+                        <p>BSc Computer Science Graduate from Aston University</p>
                         <a href="https://www.linkedin.com/in/jacob-williams-08a597172/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a>
                         <a href="mailto:jjwill@hotmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
                         <a href="https://github.com/jjwill99" class="icon brands fa-github"><span class="label">Github</span></a>
