--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<!-- Logo -->
 						<div id="logo">
 							<h1><a href="index.html">Jacob Williams</a></h1>
-							<p>Final Year Computer Science Student at Aston University</p>
+							<p>BSc Computer Science Graduate from Aston University</p>
 							<a href="https://www.linkedin.com/in/jacob-williams-08a597172/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a>
 							<a href="mailto:jjwill@hotmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a>
 							<a href="https://github.com/jjwill99" class="icon brands fa-github"><span class="label">Github</span></a>
@@ -51,7 +51,7 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
-						<p class="style1">I'm a final year Computer Science student from Birmingham, UK.</p>
+						<p class="style1">I'm a BSc Computer Science graduate from Birmingham, UK who achieved a First Class Honours.</p>
 						<p class="style1">I have had industry experience in software development at multiple companies in different fields.</p>
 						<p class="style1">I am a dedicated and motivated person who takes pride in their work and learns from every setback.</p>
 						<ul class="actions">
