--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<section id="intro" class="wrapper style1">
 					<div class="title">About Me</div>
 					<div class="container">
-						<p class="style1">I'm a BSc Computer Science graduate from Birmingham, UK who achieved a First Class Honours.</p>
+						<p class="style1">I'm a BSc Computer Science graduate from Warwick, UK who achieved a First Class Honours.</p>
 						<p class="style1">I have had industry experience in software development at multiple companies in different fields.</p>
 						<p class="style1">I am a dedicated and motivated person who takes pride in their work and learns from every setback.</p>
 						<ul class="actions">
